# scope-bloom

./: .gitignore  pyproject.toml
my_scope_plugin/: plugin.py
my_scope_plugin/pipelines/: bloom_pipeline.py  bloom_schema.py
tests/: conftest.py  test_bloom_pipeline.py
