[project]
name = "scope-plugin-bloom"
version = "0.1.0"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["pytest"]

[project.entry-points."scope"]
my_scope_plugin = "my_scope_plugin.plugin"

[tool.hatch.build.targets.wheel]
packages = ["my_scope_plugin"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
